# ai-workflow

./: .env.production  .gitignore  AGENTS.md  BROWSER-CACHE-FIX.md  CLAUDE.md  DEPLOY.md  DOCKER-DEPLOYMENT.md  DOUBLE-API-CALL-FIX.md  NATIVE-SSH-ACCESS.md  README.md  TERMINAL-REUSE-FIX.md  docker-compose-agent-history-collector.yml  docker-compose-agent-history.yml  docker-compose-no-nginx.yml  docker-compose-with-nginx.yml.bak  docker-compose.10.1.0.10.yml  docker-compose.yml  rebuild-plane-stack.sh  rebuild-stack.sh  switch-to-no-nginx.sh
agent-history-collector/: .env.example  Dockerfile  agent-history-collector.service  install.sh  package.json
agent-history-service/: .env.example  Dockerfile  package.json
agent-history-ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
docs/: user-management.md
hermes-memory-harness/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
hermes-memory-harness/scripts/: deploy-sync-container.sh
hermes-memory-harness/src/hermes_memory_harness/: __init__.py  cli.py  config.py  doris.py  hermes_sqlite.py  importer.py  memory_draft.py  sync_service.py
mac-app/: .gitignore  README.md  build-ai-workflow-app.sh
nginx/: Dockerfile  nginx.conf
plane-claude-orchestrator/: DEPLOYMENT-VERIFICATION.md  DOCKER-FIXES.md  Dockerfile  PHASE3-TESTING.md  PHASE4-TESTING.md  PRODUCTION-CHECKLIST.md  README.md  SETUP.md  config.yaml  requirements.txt
scripts/: add-test-ticket  claude-ticket-worker  complete-ticket
shellinabox/: Dockerfile  attach-session.sh
(+180 files in other folders)
